[package]
name = "test-sys"
version = "0.0.0" # DO NOT CHANGE
edition = "2021"
description = "Test sys"
license = "Apache-2.0"
repository = "https://github.com/joe-stifler/cargo-tests"

exclude = ["/target", "/Cargo.lock"]
include = ["/src", "build.rs", "Cargo.toml", "*.so*"]

[dependencies]

[build-dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
